Save Signed-off-by:nanard33 <nanard33@Nanard33-XPERT>

--- a/composer.json
+++ b/composer.json
@@ -25,10 +25,25 @@
                     "reference":"master"
                 }
             }
-        }
+        },
+        {
+            "type":"package",
+            "package": 
+            {
+                "name": "Test",
+                "version": "master",
+                "source": 
+                {
+                    "url": "https://github.com/SplashSync/Php-Tester.git",
+                    "type": "git",
+                    "reference":"master"
+                }
+            }
+        }        
     ],
     "require": {
-        "Splash": "master"
+        "Splash": "master",
+        "Test": "master"
     } 
     
 }
