Now Composer ready Moved Local Classes to /src directory Signed-off-by:nanard33 <nanard33@Nanard33-XPERT>

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /splash/Resources/Splash/
 /splash/Resources/composer/
 /splash/Resources/autoload.php
+/splash/vendor/
 /dispatch.php
 /composer.lock
