--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,12 @@
     },
 
     "require": {
-        "splash/phpcore": "dev-master"
+        "php":              "^5.6",
+        "splash/phpcore":   "*"
     },
     
     "require-dev": {
-        "phpunit/phpunit": "*"
+        "phpunit/phpunit":  "*"
     },
     
     "autoload-dev": {
