Save Signed-off-by:nanard33 <nanard33@Nanard33-XPERT>

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "prefer-stable": true,
     
     "config": {
-        "vendor-dir": "splash/vendor"
+        "vendor-dir":                       "splash/vendor",
+        "preferred-install":                "dist"
     },
     
     "autoload": {
