--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -49,5 +49,9 @@
             </exclude>
         </whitelist>
     </filter>
-
+    
+    <php>
+        <const  name="SPLASH_DEBUG" value="true" />
+        <server name="SERVER_NAME" value="http://localhost/Dolibarr/Dol-3.9"/>
+    </php>
 </phpunit>
