--- a/.travis.yml
+++ b/.travis.yml
@@ -61,10 +61,6 @@ before_script:
     # Clone Dolibarr & Move to Web folder
     - git clone --depth=1 --branch="$DOL_VERSION" https://github.com/Dolibarr/dolibarr.git $DOL_BUILD_DIR
 
-    # Build & Copy Splash Module to Dolibarr folder
-    - export PLUGIN_SLUG=$(basename $(pwd))
-    - cd ..
-    - mv "$PLUGIN_SLUG" "/tmp/Dolibarr/htdocs"
 
     # Init Database
     - bash $TRAVIS_BUILD_DIR/build/install_database.sh
@@ -84,6 +80,11 @@ before_script:
 #    
 #    # Disable Wp Debug (Not to Show notice etc...) 
 #    - sed -i "s/WP_DEBUG/WP_NO_DEBUG/" wp-tests-config.php
+    
+    # Copy Splash Module to Dolibarr folder
+    - export PLUGIN_SLUG=$(basename $(pwd))
+    - cd ..
+    - mv "$PLUGIN_SLUG" "/tmp/Dolibarr/htdocs"
     
     # Move to Dolibarr Root Dir
     - cd "$DOL_BUILD_DIR/htdocs"
