--- a/.travis.yml
+++ b/.travis.yml
@@ -61,7 +61,6 @@ before_script:
     # Clone Dolibarr & Move to Web folder
     - git clone --depth=1 --branch="$DOL_VERSION" https://github.com/Dolibarr/dolibarr.git $DOL_BUILD_DIR
 
-
     # Init Database
     - bash $TRAVIS_BUILD_DIR/build/install_database.sh
     
@@ -69,22 +68,9 @@ before_script:
     - cd /tmp/Dolibarr
     - bash $TRAVIS_BUILD_DIR/build/configure_dolibarr.sh  
 #    - bash $TRAVIS_BUILD_DIR/build/upgrade_dolibarr.sh  
-    
-#    # Configure Wordpress
-#    - cd /tmp/Wordpress
-#    - mysql -e "CREATE DATABASE wordpress_tests;" -uroot
-#    - cp wp-tests-config-sample.php wp-tests-config.php
-#    - sed -i "s/youremptytestdbnamehere/wordpress_tests/" wp-tests-config.php
-#    - sed -i "s/yourusernamehere/travis/" wp-tests-config.php
-#    - sed -i "s/yourpasswordhere//" wp-tests-config.php
-#    
-#    # Disable Wp Debug (Not to Show notice etc...) 
-#    - sed -i "s/WP_DEBUG/WP_NO_DEBUG/" wp-tests-config.php
-    
+        
     # Copy Splash Module to Dolibarr folder
-    - export PLUGIN_SLUG=$(basename $(pwd))
-    - cd ..
-    - mv "$PLUGIN_SLUG" "/tmp/Dolibarr/htdocs"
+    - cp -rf "$TRAVIS_BUILD_DIR" "/tmp/Dolibarr/htdocs"
     
     # Move to Dolibarr Root Dir
     - cd "$DOL_BUILD_DIR/htdocs"
