Work on Travis Config Signed-off-by:BadPixxel <eshop.bpaquier@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -86,6 +86,7 @@ before_script:
     
 
 script: 
+    - php build/bootstrap.php
     - phpunit --version
     - phpunit -c build/phpunit.xml.dist 
         
