--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,8 @@ env:
 #    - WP_VERSION=4.8.1 WP_MULTISITE=1
        - DOL_VERSION=6.0 DATA_VERSION=6.0.0
        - DOL_VERSION=5.0 DATA_VERSION=5.0.0
+       - DOL_VERSION=4.0 DATA_VERSION=5.0.0
+       - DOL_VERSION=3.9 DATA_VERSION=3.9.0
 #       - DOL_VERSION=develop DATA_VERSION=6.0.0
     
 install:
