New Release of Wordpress Module Version 1.2.0 Signed-off-by:BadPixxel <eshop.bpaquier@gmail.com>

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -40,6 +40,7 @@
         
     <php>
         <const  name="SPLASH_DEBUG" value="true" />
-        <server name="SERVER_NAME" value="http://localhost/Dolibarr/Dol-3.9"/>
+        <server name="SPLASH_TRAVIS" value="false" />
+        <server name="SERVER_NAME" value="http://localhost/Dolibarr/Dol-6.0"/>
     </php>
 </phpunit>
