WIP - Added Manbagement of MultiCompany Module - Moved Docs to MkDocs & Github.io

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "SplashSync/Dolibarr",
+    "name": "splash/dolibarr",
     "description": "Splash Module for Dolibarr ERP",
 
     "license": "GPL",
