--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -22,15 +22,18 @@
             <directory>splash/vendor/splash/phpcore/Tests/*</directory>
         </testsuite>
         <testsuite name="Local">
+            <directory>splash/src/Tests/L05MultiCompanyTest.php</directory>
             <directory>splash/src/Tests/*</directory>
         </testsuite>
     </testsuites>
 
     <filter>
-        <whitelist processUncoveredFilesFromWhitelist="true">
-            <directory>splash/src/Objects</directory>
-            <directory>splash/src/Widgets</directory>
-            <file>splash/src/Local.php</file>
+        <whitelist processUncoveredFilesFromWhitelist="true" >
+            <directory>./splash/src/Tests/</directory>
+            <directory>./splash/vendor/splash/phpcore</directory>
+            <exclude>
+                <directory>vendor</directory>
+            </exclude>
         </whitelist>
     </filter>
     
@@ -39,8 +42,8 @@
     </logging> 
         
     <php>
-        <const  name="SPLASH_DEBUG" value="true" />
-        <server name="SPLASH_TRAVIS" value="false" />
-        <server name="SERVER_NAME" value="http://localhost/Dolibarr/Dol-6.0"/>
+        <const  name="SPLASH_DEBUG"     value="true" />
+        <server name="SPLASH_TRAVIS"    value="false" />
+        <server name="SERVER_NAME"  value="http://localhost/Dolibarr/Dol-Multi/custom"/>
     </php>
 </phpunit>
