WIP - Added Manbagement of MultiCompany Module - Moved Docs to MkDocs & Github.io

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "splash/dolibarr",
     "description": "Splash Module for Dolibarr ERP",
 
-    "license": "GPL",
+    "license": "MIT",
 
     "minimum-stability": "dev",
     "prefer-stable": true,
