--- a/splash/mkdoc/mkdocs.yml
+++ b/splash/mkdoc/mkdocs.yml
@@ -18,7 +18,7 @@ pages:
     - Installation:             install.md
     - Configuration:            configuration.md
 #    - Test & Connect: connect.md
-    - Français :
+    - Documentation Française :
         - Accueil :             fr/index.md
         - Fonctionnalités:      fr/features.md
         - Installation:         fr/install.md
