--- a/.travis.yml
+++ b/.travis.yml
@@ -3,26 +3,63 @@
 # Tell Travis CI we're using PHP
 language: php
 
-# Versions of PHP to test against
-php:
-    - "5.6"
-    - "7.0"
-    - "7.1"
-#    - "7.2"
-
-# Specify versions of WordPress to test against
-# WP_VERSION = WordPress version number (use "master" for SVN trunk)
-# WP_MULTISITE = whether to test multisite (use either "0" or "1")
+# Specify versions of Php & Dolibarr to test against
+# DOL_VERSION   = Github Branch
+# DATA_VERSION  = Demo data Versions tu USe for Testing
 env:
     global:
         # Set to true for very verbose output
         - DEBUG=false  
-    matrix:
-       - DOL_VERSION=develop DATA_VERSION=7.0.0
-       - DOL_VERSION=7.0 DATA_VERSION=7.0.0
-       - DOL_VERSION=6.0 DATA_VERSION=6.0.0
-       - DOL_VERSION=5.0 DATA_VERSION=5.0.0
-       - DOL_VERSION=4.0 DATA_VERSION=4.0.0
+        
+matrix:
+    include:
+        # Dolibarr V4.0 Branch       
+        - php: 5.6
+          env: DOL_VERSION=4.0 DATA_VERSION=4.0.0     
+        - php: 7.0
+          env: DOL_VERSION=4.0 DATA_VERSION=4.0.0  
+        - php: 7.1
+          env: DOL_VERSION=4.0 DATA_VERSION=4.0.0
+
+        # Dolibarr V5.0 Branch       
+        - php: 5.6
+          env: DOL_VERSION=5.0 DATA_VERSION=5.0.0     
+        - php: 7.0
+          env: DOL_VERSION=5.0 DATA_VERSION=5.0.0  
+        - php: 7.1
+          env: DOL_VERSION=5.0 DATA_VERSION=5.0.0
+
+        # Dolibarr V6.0 Branch       
+        - php: 5.6
+          env: DOL_VERSION=6.0 DATA_VERSION=6.0.0     
+        - php: 7.0
+          env: DOL_VERSION=6.0 DATA_VERSION=6.0.0     
+        - php: 7.1
+          env: DOL_VERSION=6.0 DATA_VERSION=6.0.0     
+
+        # Dolibarr V7.0 Branch       
+        - php: 5.6
+          env: DOL_VERSION=7.0 DATA_VERSION=7.0.0     
+        - php: 7.0
+          env: DOL_VERSION=7.0 DATA_VERSION=7.0.0     
+        - php: 7.1
+          env: DOL_VERSION=7.0 DATA_VERSION=7.0.0     
+          
+        # Dolibarr Develop Branch       
+        - php: 5.6
+          env: DOL_VERSION=develop DATA_VERSION=7.0.0     
+        - php: 7.0
+          env: DOL_VERSION=develop DATA_VERSION=7.0.0     
+        - php: 7.1
+          env: DOL_VERSION=develop DATA_VERSION=7.0.0     
+          
+    allow_failures:
+        - php: 7.2 
+        - env: DOL_VERSION=develop DATA_VERSION=7.0.0
+          
+        
+    # Fast finish allows to set the build as "finished" even if the "allow_failures" matrix elements are not finished yet.
+    fast_finish: true
     
 install:
     # Disable Xdebug ...
