--- a/.travis.yml
+++ b/.travis.yml
@@ -13,45 +13,49 @@ env:
         
 matrix:
     include:
-        # Dolibarr V4.0 Branch       
-        - php: 5.6
-          env: DOL_VERSION=4.0 DATA_VERSION=4.0.0     
-        - php: 7.0
-          env: DOL_VERSION=4.0 DATA_VERSION=4.0.0  
-        - php: 7.1
-          env: DOL_VERSION=4.0 DATA_VERSION=4.0.0
-
-        # Dolibarr V5.0 Branch       
-        - php: 5.6
-          env: DOL_VERSION=5.0 DATA_VERSION=5.0.0     
-        - php: 7.0
-          env: DOL_VERSION=5.0 DATA_VERSION=5.0.0  
-        - php: 7.1
-          env: DOL_VERSION=5.0 DATA_VERSION=5.0.0
-
-        # Dolibarr V6.0 Branch       
-        - php: 5.6
-          env: DOL_VERSION=6.0 DATA_VERSION=6.0.0     
-        - php: 7.0
-          env: DOL_VERSION=6.0 DATA_VERSION=6.0.0     
-        - php: 7.1
-          env: DOL_VERSION=6.0 DATA_VERSION=6.0.0     
-
-        # Dolibarr V7.0 Branch       
-        - php: 5.6
-          env: DOL_VERSION=7.0 DATA_VERSION=7.0.0     
-        - php: 7.0
-          env: DOL_VERSION=7.0 DATA_VERSION=7.0.0     
-        - php: 7.1
+#        # Dolibarr V4.0 Branch       
+#        - php: 5.6
+#          env: DOL_VERSION=4.0 DATA_VERSION=4.0.0     
+#        - php: 7.0
+#          env: DOL_VERSION=4.0 DATA_VERSION=4.0.0  
+#        - php: 7.1
+#          env: DOL_VERSION=4.0 DATA_VERSION=4.0.0
+#
+#        # Dolibarr V5.0 Branch       
+#        - php: 5.6
+#          env: DOL_VERSION=5.0 DATA_VERSION=5.0.0     
+#        - php: 7.0
+#          env: DOL_VERSION=5.0 DATA_VERSION=5.0.0  
+#        - php: 7.1
+#          env: DOL_VERSION=5.0 DATA_VERSION=5.0.0
+#
+#        # Dolibarr V6.0 Branch       
+#        - php: 5.6
+#          env: DOL_VERSION=6.0 DATA_VERSION=6.0.0     
+#        - php: 7.0
+#          env: DOL_VERSION=6.0 DATA_VERSION=6.0.0     
+#        - php: 7.1
+#          env: DOL_VERSION=6.0 DATA_VERSION=6.0.0     
+#        - php: 7.2
+#          env: DOL_VERSION=6.0 DATA_VERSION=6.0.0     
+#
+#        # Dolibarr V7.0 Branch       
+#        - php: 5.6
+#          env: DOL_VERSION=7.0 DATA_VERSION=7.0.0     
+#        - php: 7.0
+#          env: DOL_VERSION=7.0 DATA_VERSION=7.0.0     
+#        - php: 7.1
+#          env: DOL_VERSION=7.0 DATA_VERSION=7.0.0     
+        - php: 7.2
           env: DOL_VERSION=7.0 DATA_VERSION=7.0.0     
           
         # Dolibarr Develop Branch       
-        - php: 5.6
-          env: DOL_VERSION=develop DATA_VERSION=7.0.0     
-        - php: 7.0
-          env: DOL_VERSION=develop DATA_VERSION=7.0.0     
+#        - php: 7.0
+#          env: DOL_VERSION=develop DATA_VERSION=7.0.0     
         - php: 7.1
           env: DOL_VERSION=develop DATA_VERSION=7.0.0     
+#        - php: 7.2
+#          env: DOL_VERSION=develop DATA_VERSION=7.0.0     
           
     allow_failures:
         - php: 7.2 
