--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -22,17 +22,16 @@
             <directory>splash/vendor/splash/phpcore/Tests/*</directory>
         </testsuite>
         <testsuite name="Local">
-            <directory>splash/src/Tests/L05MultiCompanyTest.php</directory>
-            <directory>splash/src/Tests/*</directory>
+            <directory>splash/src/Tests</directory>
         </testsuite>
     </testsuites>
 
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true" >
-            <directory>./splash/src/Tests/</directory>
-            <directory>./splash/vendor/splash/phpcore</directory>
+            <directory>splash/src/Tests</directory>
+            <directory>splash/vendor/splash/phpcore</directory>
             <exclude>
-                <directory>vendor</directory>
+                <directory>splash/vendor</directory>
             </exclude>
         </whitelist>
     </filter>
