--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,17 @@
     },
     
     "require-dev": {
-        "phpunit/phpunit":  "*"
+        "phpunit/phpunit":                  ">5.4",
+        "composer/composer":                "^1.5",
+        "j13k/yaml-lint":                   "^1.1",
+        "jakub-onderka/php-parallel-lint":  "^1.0",
+        "phpmd/phpmd":                      "^2.6",
+        "phpro/grumphp":                    "^0.14.0",
+        "sclable/xml-lint":                 "^0.2.4",
+        "sebastian/phpcpd":                 ">3.0",
+        "seld/jsonlint":                    "^1.7",
+        "sensiolabs/security-checker":      "^4.1",
+        "squizlabs/php_codesniffer":        "^3.2"
     },
     
     "autoload-dev": {
