BugFix : Linker List buttons not shown

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
 
     "require": {
         "php":              "^5.6|^7.0",
-        "splash/phpcore":   "*"
+        "splash/phpcore":   "dev-master"
     },
     
     "require-dev": {
