--- a/.travis.yml
+++ b/.travis.yml
@@ -107,9 +107,11 @@ before_script:
     - bash $TRAVIS_BUILD_DIR/build/upgrade_dolibarr.sh  
         
     # Copy Splash Module to Dolibarr folder
-    - cp -rf "$TRAVIS_BUILD_DIR/splash" "$DOL_BUILD_DIR/htdocs/splash"
-    - cp "$TRAVIS_BUILD_DIR/composer.json" "$DOL_BUILD_DIR/htdocs/composer.json"
-    - cp -rf "$TRAVIS_BUILD_DIR/build" "$DOL_BUILD_DIR/htdocs/build"
+    - cp -rf "$TRAVIS_BUILD_DIR/.git"       "$DOL_BUILD_DIR/htdocs/.git"
+    - cp -rf "$TRAVIS_BUILD_DIR/build"      "$DOL_BUILD_DIR/htdocs/build"
+    - cp -rf "$TRAVIS_BUILD_DIR/splash"     "$DOL_BUILD_DIR/htdocs/splash"
+    - cp "$TRAVIS_BUILD_DIR/grumphp.yml"    "$DOL_BUILD_DIR/htdocs/grumphp.yml"
+    - cp "$TRAVIS_BUILD_DIR/composer.json"  "$DOL_BUILD_DIR/htdocs/composer.json"
 
     # Run Composer
     - cd "$DOL_BUILD_DIR/htdocs/"
@@ -117,17 +119,21 @@ before_script:
     - if [[ ${TRAVIS_PHP_VERSION:0:1} == "7" ]]; then composer require phpstan/phpstan-shim --no-update; fi
     - composer update 
     
-    # Move to Dolibarr Root Dir
-    - cd "$DOL_BUILD_DIR/htdocs"
+
     
 
 script: 
-    # Execute Bootstrap file    
-    - php build/bootstrap.php
+    
+    # Move to Dolibarr Root Dir
+    - cd "$DOL_BUILD_DIR/htdocs"    
+    
     # Run Grump Main Test Sequence
     - php ./splash/vendor/bin/grumphp run --testsuite=travis
     # With PHP 7 => Execute Phpstan 
     - if [[ ${TRAVIS_PHP_VERSION:0:1} == "7" ]]; then php ./splash/vendor/bin/grumphp run --testsuite=phpstan; fi     
+    
+    # Execute Bootstrap file    
+    - php build/bootstrap.php
     # Show PhpUnit Version
     - phpunit --version
     # Run PhpUnit Main Sequence
