WIP : Install GrumPhp & Fixes

--- a/grumphp.yml
+++ b/grumphp.yml
@@ -49,7 +49,7 @@ parameters:
                 - phplint
                 - phpcs 
                 - git_blacklist
-#                - jsonlint
+                - jsonlint
                 - phpmd
                 - phpcpd
                 - xmllint
