--- a/.travis.yml
+++ b/.travis.yml
@@ -107,10 +107,13 @@ before_script:
     - bash $TRAVIS_BUILD_DIR/build/upgrade_dolibarr.sh  
         
     # Copy Splash Module to Dolibarr folder
-    - cp -rf "$TRAVIS_BUILD_DIR"            "$DOL_BUILD_DIR/htdocs"
     - cp -rf "$TRAVIS_BUILD_DIR/.git"       "$DOL_BUILD_DIR/htdocs/.git"
+    - cp -rf "$TRAVIS_BUILD_DIR/docs"       "$DOL_BUILD_DIR/htdocs/docs"
     - cp -rf "$TRAVIS_BUILD_DIR/build"      "$DOL_BUILD_DIR/htdocs/build"
     - cp -rf "$TRAVIS_BUILD_DIR/splash"     "$DOL_BUILD_DIR/htdocs/splash"
+    - cp "$TRAVIS_BUILD_DIR/LICENSE"     "$DOL_BUILD_DIR/htdocs/travis.yml"
+    - cp "$TRAVIS_BUILD_DIR/README.md"     "$DOL_BUILD_DIR/htdocs/travis.yml"
+    - cp "$TRAVIS_BUILD_DIR/travis.yml"     "$DOL_BUILD_DIR/htdocs/travis.yml"
     - cp "$TRAVIS_BUILD_DIR/grumphp.yml"    "$DOL_BUILD_DIR/htdocs/grumphp.yml"
     - cp "$TRAVIS_BUILD_DIR/composer.json"  "$DOL_BUILD_DIR/htdocs/composer.json"
 
