--- a/grumphp.yml
+++ b/grumphp.yml
@@ -28,7 +28,9 @@ parameters:
         jsonlint:
             ignore_patterns:        [ "docs" ]
             detect_key_conflicts:   true
-        xmllint: ~
+        xmllint:
+            ignore_patterns:        
+                - "docs"            
         yamllint: ~
         phpmd:
             ruleset:        ["./build/phpmd.xml"]
