WIP : Install GrumPhp & Fixes

--- a/.travis.yml
+++ b/.travis.yml
@@ -109,10 +109,10 @@ before_script:
         
     # Copy Splash Module to Dolibarr folder
     - cp -Rf $TRAVIS_BUILD_DIR/*            $DOL_BUILD_DIR/htdocs/custom/
-    - cp -Rf $TRAVIS_BUILD_DIR/.git/            $DOL_BUILD_DIR/htdocs/custom/.git/
+    - cp -Rf $TRAVIS_BUILD_DIR/.git/        $DOL_BUILD_DIR/htdocs/custom/.git/
 #    - cp -rf "$TRAVIS_BUILD_DIR/build"      "$DOL_BUILD_DIR/htdocs/custom/build"
 #    - cp -rf "$TRAVIS_BUILD_DIR/splash"     "$DOL_BUILD_DIR/htdocs/custom/splash"
-#    - cp "$TRAVIS_BUILD_DIR/.travis.yml"    "$DOL_BUILD_DIR/htdocs/.travis.yml"
+    - cp "$TRAVIS_BUILD_DIR/.travis.yml"    "$DOL_BUILD_DIR/htdocs/custom/.travis.yml"
 #    - cp "$TRAVIS_BUILD_DIR/grumphp.yml"    "$DOL_BUILD_DIR/htdocs/grumphp.yml"
 #    - cp "$TRAVIS_BUILD_DIR/composer.json"  "$DOL_BUILD_DIR/htdocs/composer.json"
 
