--- a/.travis.yml
+++ b/.travis.yml
@@ -13,49 +13,49 @@ env:
         
 matrix:
     include:
-#        # Dolibarr V4.0 Branch       
-#        - php: 5.6
-#          env: DOL_VERSION=4.0 DATA_VERSION=4.0.0     
-#        - php: 7.0
-#          env: DOL_VERSION=4.0 DATA_VERSION=4.0.0  
-#        - php: 7.1
-#          env: DOL_VERSION=4.0 DATA_VERSION=4.0.0
-#
-#        # Dolibarr V5.0 Branch       
-#        - php: 5.6
-#          env: DOL_VERSION=5.0 DATA_VERSION=5.0.0     
-#        - php: 7.0
-#          env: DOL_VERSION=5.0 DATA_VERSION=5.0.0  
-#        - php: 7.1
-#          env: DOL_VERSION=5.0 DATA_VERSION=5.0.0
-#
-#        # Dolibarr V6.0 Branch       
-#        - php: 5.6
-#          env: DOL_VERSION=6.0 DATA_VERSION=6.0.0     
-#        - php: 7.0
-#          env: DOL_VERSION=6.0 DATA_VERSION=6.0.0     
-#        - php: 7.1
-#          env: DOL_VERSION=6.0 DATA_VERSION=6.0.0     
-#        - php: 7.2
-#          env: DOL_VERSION=6.0 DATA_VERSION=6.0.0     
-#
-#        # Dolibarr V7.0 Branch       
-#        - php: 5.6
-#          env: DOL_VERSION=7.0 DATA_VERSION=7.0.0     
+        # Dolibarr V4.0 Branch       
+        - php: 5.6
+          env: DOL_VERSION=4.0 DATA_VERSION=4.0.0     
+        - php: 7.0
+          env: DOL_VERSION=4.0 DATA_VERSION=4.0.0  
+        - php: 7.1
+          env: DOL_VERSION=4.0 DATA_VERSION=4.0.0
+
+        # Dolibarr V5.0 Branch       
+        - php: 5.6
+          env: DOL_VERSION=5.0 DATA_VERSION=5.0.0     
+        - php: 7.0
+          env: DOL_VERSION=5.0 DATA_VERSION=5.0.0  
+        - php: 7.1
+          env: DOL_VERSION=5.0 DATA_VERSION=5.0.0
+
+        # Dolibarr V6.0 Branch       
+        - php: 5.6
+          env: DOL_VERSION=6.0 DATA_VERSION=6.0.0     
+        - php: 7.0
+          env: DOL_VERSION=6.0 DATA_VERSION=6.0.0     
+        - php: 7.1
+          env: DOL_VERSION=6.0 DATA_VERSION=6.0.0     
+        - php: 7.2
+          env: DOL_VERSION=6.0 DATA_VERSION=6.0.0     
+
+        # Dolibarr V7.0 Branch       
+        - php: 5.6
+          env: DOL_VERSION=7.0 DATA_VERSION=7.0.0     
         - php: 7.0
           env: DOL_VERSION=7.0 DATA_VERSION=7.0.0     
-#        - php: 7.1
-#          env: DOL_VERSION=7.0 DATA_VERSION=7.0.0     
-#        - php: 7.2
-#          env: DOL_VERSION=7.0 DATA_VERSION=7.0.0     
-#          
-#        # Dolibarr Develop Branch       
-#        - php: 7.0
-#          env: DOL_VERSION=develop DATA_VERSION=7.0.0     
-#        - php: 7.1
-#          env: DOL_VERSION=develop DATA_VERSION=7.0.0     
-#        - php: 7.2
-#          env: DOL_VERSION=develop DATA_VERSION=7.0.0     
+        - php: 7.1
+          env: DOL_VERSION=7.0 DATA_VERSION=7.0.0     
+        - php: 7.2
+          env: DOL_VERSION=7.0 DATA_VERSION=7.0.0     
+          
+        # Dolibarr Develop Branch       
+        - php: 7.0
+          env: DOL_VERSION=develop DATA_VERSION=7.0.0     
+        - php: 7.1
+          env: DOL_VERSION=develop DATA_VERSION=7.0.0     
+        - php: 7.2
+          env: DOL_VERSION=develop DATA_VERSION=7.0.0     
           
     allow_failures:
         - env: DOL_VERSION=develop DATA_VERSION=7.0.0
@@ -118,9 +118,6 @@ before_script:
     - if [[ ${TRAVIS_PHP_VERSION:0:1} == "7" ]]; then composer require phpstan/phpstan-shim --no-update; fi
     - composer update 
     
-
-    
-
 script: 
     
     # Move to Dolibarr Root Dir
