--- a/.travis.yml
+++ b/.travis.yml
@@ -15,47 +15,49 @@ matrix:
     include:
         # Dolibarr V4.0 Branch       
         - php: 5.6
-          env: DOL=4.0 DATA=4.0.0     
+          env: DOL=4.0 DATA=4.0.0 STAN=0   
         - php: 7.0
-          env: DOL=4.0 DATA=4.0.0  
+          env: DOL=4.0 DATA=4.0.0 STAN=0
         - php: 7.1
-          env: DOL=4.0 DATA=4.0.0
+          env: DOL=4.0 DATA=4.0.0 STAN=0
 
         # Dolibarr V5.0 Branch       
         - php: 5.6
-          env: DOL=5.0 DATA=5.0.0     
+          env: DOL=5.0 DATA=5.0.0 STAN=0     
         - php: 7.0
-          env: DOL=5.0 DATA=5.0.0  
+          env: DOL=5.0 DATA=5.0.0 STAN=0  
         - php: 7.1
-          env: DOL=5.0 DATA=5.0.0
+          env: DOL=5.0 DATA=5.0.0 STAN=0
 
         # Dolibarr V6.0 Branch       
         - php: 5.6
-          env: DOL=6.0 DATA=6.0.0     
+          env: DOL=6.0 DATA=6.0.0 STAN=0    
         - php: 7.0
-          env: DOL=6.0 DATA=6.0.0     
+          env: DOL=6.0 DATA=6.0.0 STAN=1     
         - php: 7.1
-          env: DOL=6.0 DATA=6.0.0     
+          env: DOL=6.0 DATA=6.0.0 STAN=1     
         - php: 7.2
-          env: DOL=6.0 DATA=6.0.0     
+          env: DOL=6.0 DATA=6.0.0 STAN=1     
 
         # Dolibarr V7.0 Branch       
         - php: 5.6
-          env: DOL=7.0 DATA=7.0.0     
+          env: DOL=7.0 DATA=7.0.0 STAN=0    
         - php: 7.0
-          env: DOL=7.0 DATA=7.0.0     
+          env: DOL=7.0 DATA=7.0.0 STAN=1       
         - php: 7.1
-          env: DOL=7.0 DATA=7.0.0     
+          env: DOL=7.0 DATA=7.0.0 STAN=1     
         - php: 7.2
-          env: DOL=7.0 DATA=7.0.0     
+          env: DOL=7.0 DATA=7.0.0 STAN=1     
           
         # Dolibarr Develop Branch       
+        - php: 5.6
+          env: DOL=develop DATA=7.0.0 STAN=0        
         - php: 7.0
-          env: DOL=develop DATA=7.0.0     
+          env: DOL=develop DATA=7.0.0 STAN=1    
         - php: 7.1
-          env: DOL=develop DATA=7.0.0     
+          env: DOL=develop DATA=7.0.0 STAN=1    
         - php: 7.2
-          env: DOL=develop DATA=7.0.0     
+          env: DOL=develop DATA=7.0.0 STAN=1    
           
     allow_failures:
         - env: DOL=develop DATA=7.0.0
@@ -101,7 +103,7 @@ before_script:
     # Run Composer
     - cd "$DOL_BUILD_DIR/htdocs/custom/"
     # With PHP 7 => Load Phpstan   
-    - if [[ ${TRAVIS_PHP_VERSION:0:1} == "7" ]]; then composer require phpstan/phpstan-shim --no-update; fi
+    - if [[ $STAN == "1" ]]; then composer require phpstan/phpstan-shim --no-update; fi
     - composer update 
     
 script: 
@@ -112,7 +114,7 @@ script:
     # Run Grump Main Test Sequence
     - php ./splash/vendor/bin/grumphp run --testsuite=travis
     # With PHP 7 => Execute Phpstan 
-    - if [[ ${TRAVIS_PHP_VERSION:0:1} == "7" ]]; then php ./splash/vendor/bin/grumphp run --testsuite=phpstan; fi     
+    - if [[ $STAN == "1" ]]; then php ./splash/vendor/bin/grumphp run --testsuite=phpstan; fi     
     
     # Execute Bootstrap file    
     - php build/bootstrap.php
