--- a/grumphp.yml
+++ b/grumphp.yml
@@ -44,6 +44,7 @@ parameters:
             ignore_patterns:
                 - LocalizationTrait.php
                 - splash/admin
+                - L03PaymentBanksTest.php
 
     testsuites:
         travis:
