WIP: PhpUnit for Dolibarr 8.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,16 @@ matrix:
         - php: 7.2
           env: DOL=7.0 DATA=7.0.0 STAN=1     
           
+        # Dolibarr V8.0 Branch       
+        - php: 5.6
+          env: DOL=8.0 DATA=7.0.0 STAN=0    
+        - php: 7.0
+          env: DOL=8.0 DATA=7.0.0 STAN=1       
+        - php: 7.1
+          env: DOL=8.0 DATA=7.0.0 STAN=1     
+        - php: 7.2
+          env: DOL=8.0 DATA=7.0.0 STAN=1     
+          
         # Dolibarr Develop Branch       
         - php: 5.6
           env: DOL=develop DATA=7.0.0 STAN=0        
