--- a/.travis.yml
+++ b/.travis.yml
@@ -114,7 +114,7 @@ before_script:
     # Run Composer
     - cd "$DOL_BUILD_DIR/htdocs/custom/"
     # With PHP 7 => Load Phpstan   
-    - if [[ $STAN == "1" ]]; then composer require phpstan/phpstan-shim --no-update; fi
+    - if [[ $STAN == "1" ]]; then composer require phpstan/phpstan-shim 0.9.2 --no-update; fi
     - composer update 
     
 script: 
